--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "![imagen del proyecto](/skydives_home.png \"imágen del proyecto\")",
   "main": "app.js",
   "scripts": {
+    "dev" : "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/Gonzatdf/grupo_8_skydiveHouse#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "ejs": "3.1.8",
+    "express": "4.18.1"
   }
 }
