--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![imagen del proyecto](/skydives_home.png \"imágen del proyecto\")",
   "main": "app.js",
   "scripts": {
-    "dev" : "nodemon app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +21,8 @@
   "dependencies": {
     "ejs": "3.1.8",
     "express": "4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
