--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "![imagen del proyecto](/skydives_home.png \"imágen del proyecto\")",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/Gonzatdf/grupo_8_skydiveHouse#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
