--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Gonzatdf/grupo_8_skydiveHouse#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "ejs": "3.1.8",
     "express": "4.18.1",
     "express-session": "^1.17.3",
